force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Account_Credit_Used__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Used__c</fullName>
    <description>Accounting can populate this field with the account credit that will be applied towards this order so client know what is outstanding</description>
    <label>Account Credit Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>