force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Captures the Account Name of the Quote. Used for FastForms.</description>
    <inlineHelpText>Indicates the Account Name of the Quote. Used for FastForms.</inlineHelpText>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>