force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Additional_Devices__c.field-meta.xml
<CustomField>
    <fullName>Additional_Devices__c</fullName>
    <label>Additional Devices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>All_Additional_Devices</valueSetName>
    </valueSet>
</CustomField>