force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Amazon_Sku__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Sku__c</fullName>
    <formula>SBQQ__Product__r.Amazon_Sku__c</formula>
    <label>Amazon Sku</label>
    <type>Text</type>
</CustomField>