force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bill_To_Province__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Province__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__BillingState__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Province</label>
    <type>Text</type>
</CustomField>