force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Calculated_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Gross_Margin__c</fullName>
    <formula>Total_Amount_Without_Tax__c -( (SBQQ__Product__r.Base_Cost__c +

(( Volume_Discount__c + Contracted_Discount_Display__c ) *  SBQQ__Product__r.Commission_Offset__c )

) * SBQQ__Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>