force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Card_Cert_Product_Title__c.field-meta.xml
<CustomField>
    <fullName>Card_Cert_Product_Title__c</fullName>
    <description>Captures the external card/cert product name to use with certification templates. Populated upon creation of Quote Line.</description>
    <inlineHelpText>Indicates the external card/cert product name to use with certification templates.</inlineHelpText>
    <label>Card/Cert Product Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>