force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Card_Template__c.field-meta.xml
<CustomField>
    <fullName>Card_Template__c</fullName>
    <description>Captures the card template used for this course product. Populated upon creation of Quote Line.</description>
    <inlineHelpText>Indicates the card template used for this course product.</inlineHelpText>
    <label>Card Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>