force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Sets the Category based on the Product Family, Delivery Method and other variables. Used for reporting</description>
    <formula>IF(ISPICKVAL(SBQQ__Product__r.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(SBQQ__Product__r.Delivery_Method__c,&quot;Classroom&quot;) &amp;&amp; ISPICKVAL(Classroom_Course__r.IH3POS__c, &quot;In-House&quot;), &quot;In-House&quot;, 
IF(ISPICKVAL(SBQQ__Product__r.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(SBQQ__Product__r.Delivery_Method__c,&quot;Classroom&quot;) &amp;&amp; ISPICKVAL(Classroom_Course__r.IH3POS__c, &quot;3rd Party&quot;), &quot;Third Party&quot;, 
IF(ISPICKVAL(SBQQ__Product__r.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(SBQQ__Product__r.Delivery_Method__c,&quot;On-site&quot;), &quot;Onsite&quot;, 
IF(ISPICKVAL(SBQQ__Product__r.Family, &quot;Consulting Services&quot;), &quot;Consulting/Contract&quot;, 
IF(ISPICKVAL(SBQQ__Product__r.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(SBQQ__Product__r.Delivery_Method__c,&quot;Online&quot;), &quot;Online&quot;, 
IF(ISPICKVAL(SBQQ__Product__r.Family, &quot;Memberships&quot;) &amp;&amp; ISPICKVAL(SBQQ__Product__r.Delivery_Method__c,&quot;Online&quot;), &quot;Online Membership&quot;, 
IF(ISPICKVAL(SBQQ__Product__r.Family, &quot;Physical Goods&quot;), &quot;Materials/Videos&quot;, 
null)))))))</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>