force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Certificate_Template__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Template__c</fullName>
    <description>Captures the certificate template used for this course product. Populated upon creation of Quote Line.</description>
    <inlineHelpText>Indicates the certificate template used for this course product.</inlineHelpText>
    <label>Certificate Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>