force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Class_Spaces_Left__c.field-meta.xml
<CustomField>
    <fullName>Class_Spaces_Left__c</fullName>
    <formula>Classroom_Course__r.Spaces_Left__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Spaces Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>