force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Classroom_Course__c.field-meta.xml
<CustomField>
    <fullName>Classroom_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connection to scheduled &quot;Classroom&quot; Service Appointment records (IH or 3P). Establishes the ability to book seats (quoted quantity) against a classroom course.</description>
    <inlineHelpText>Connection to scheduled &quot;Classroom&quot; Service Appointment records (IH or 3P). Establishes the ability to book seats (quoted quantity) against a classroom course.</inlineHelpText>
    <label>Classroom Course</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Classroom Quoted Seats</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>