force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>if (SBQQ__Product__r.Pay_Commission__c , round(Total_Amount_Without_Tax__c*SBQQ__Quote__r.Owner:User.Commission_Rate__c,2), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>