force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Contracted_Discount__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Discount__c</fullName>
    <formula>if (not(isblank( SBQQ__ContractedPrice__c)),
 SBQQ__ContractedPrice__r.SBQQ__Price__c - SBQQ__ListPrice__c,
0
)

/*
if (not(isblank( SBQQ__ContractedPrice__c)),
 SBQQ__ContractedPrice__r.SBQQ__Price__c - SBQQ__ListPrice__c,
 SBQQ__ListPrice__c
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>