force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Contracted_Discount_Display__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Discount_Display__c</fullName>
    <formula>if(Promotional_Discount__r.Priority__c = true,
0,
if(  ABS(Contracted_Discount__c) &gt;=  ABS(SBQQ__VolumeDiscount__c *100 + CPQ_Rule_Promo_Discount__c), Contracted_Discount__c, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>