force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Count_of_Greenbooks__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Greenbooks__c</fullName>
    <label>Count of Greenbooks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>