force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Count_of_Half_Day_Courses__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Half_Day_Courses__c</fullName>
    <description>Count of all Quote Lines where Is Half Day Course = 1. Populated via Price Rule and Summary Variable</description>
    <inlineHelpText>Count of all Quote Lines where Is Half Day Course = 1. Populated via Price Rule and Summary Variable</inlineHelpText>
    <label>Count of Half Day Courses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>