force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Count_of_Same_Day_Course_Match__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Same_Day_Course_Match__c</fullName>
    <description>Count of all Quote Lines where Same Day Course Match = True. Populated via Price Rule and Summary Variable</description>
    <inlineHelpText>Count of all Quote Lines where Same Day Course Match = True. Populated via Price Rule and Summary Variable</inlineHelpText>
    <label>Count of Same Day Course Match</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>