force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Course_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Course_Product_Line__c</fullName>
    <description>Captures the product line for the Product. Populated via Process Rule for use with roll-ups.</description>
    <inlineHelpText>Indicates the product line.</inlineHelpText>
    <label>Course Product Line</label>
    <length>15</length>
    <type>Text</type>
</CustomField>