force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_Rule_Sales_Discount__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Rule_Sales_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CPQ Rule Sales Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>