force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Default_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Default_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures OSG Global Territory Service Territory record</description>
    <label>Default Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>