force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Priority__c.field-meta.xml
<CustomField>
    <fullName>Discount_Priority__c</fullName>
    <label>DELETE Discount Priority</label>
    <length>16</length>
    <type>Text</type>
</CustomField>