force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Product&apos;s Duration. Used with Price Rule to set Quantity of Additional Hours Product.</description>
    <inlineHelpText>Product&apos;s Duration. Used with Price Rule to set Quantity of Additional Hours Product.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>