force-app/main/default/objects/SBQQ__QuoteLine__c/fields/External_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Name__c</fullName>
    <description>Captures the external product name to be used on quote output documents. Populated upon creation of Quote Line.</description>
    <inlineHelpText>Indicates the external product name to be used on quote output documents.</inlineHelpText>
    <label>External Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>