force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Invoice_Duration__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Duration__c</fullName>
    <formula>if ( SBQQ__ProductCode__c = &apos;AE-AA&apos;, &apos;See Above&apos;,

  if (Duration__c = 4, &apos;Half Day&apos;,

    If (  Duration__c &gt; 10 , 

      Text(Round( Duration__c /8,0)) + &apos; Days&apos;,
      
      if (Duration__c = 8,
        &apos;One Day&apos;,

        if (Duration__c = 1,
          &apos;One Hour&apos;,

          if (Duration__c &lt; 1,
            Text(round(Duration__c*60,0)) + &apos; Minutes&apos;,
            Text(Duration__c) + &apos; Hours&apos;
            )
        )
      )

    )
  
  )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Duration</label>
    <type>Text</type>
</CustomField>