force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Is_Weekend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Weekend</label>
    <type>Checkbox</type>
</CustomField>