force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LMS_Subscription_Length__c.field-meta.xml
<CustomField>
    <fullName>LMS_Subscription_Length__c</fullName>
    <label>LMS Subscription Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LMS_Subscription_Length</valueSetName>
    </valueSet>
</CustomField>