force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LMS_Subscription_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>LMS_Subscription_Payment_Terms__c</fullName>
    <label>LMS Subscription Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LMS_Subscription_Payment_Terms</valueSetName>
    </valueSet>
</CustomField>