force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MaxOSCapacity_AdditionalChargeThreshold__c.field-meta.xml
<CustomField>
    <fullName>MaxOSCapacity_AdditionalChargeThreshold__c</fullName>
    <description>Formula field to pull the Product or Product Options&apos;s MaxOSCapacity(AdditionalChargeThreshold). Used with Price Rule to set Quantity of Additional Attendee Product.</description>
    <formula>IF(
ISBLANK(SBQQ__ProductOption__c),
SBQQ__Product__r.MaxOSCapacity_AdditionalChargeThreshold__c,
SBQQ__ProductOption__r.MaxOSCapacity_AdditionalChargeThreshold__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to pull the Product or Product Options&apos;s MaxOSCapacity(AdditionalChargeThreshold). Used with Price Rule to set Quantity of Additional Attendee Product.</inlineHelpText>
    <label>MaxOSCapacity(AdditionalChargeThreshold)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>