force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Payment_Membership__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Membership__c</fullName>
    <description>Monthly payment for membership product.</description>
    <formula>SBQQ__NetTotal__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly payment for membership product.</inlineHelpText>
    <label>Monthly Payment (Membership)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>