force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Preferred_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_and_Time__c</fullName>
    <description>Captures the preferred date and time for the service appointment. Used in the &quot;Book Appointment&quot; process.</description>
    <inlineHelpText>Indicates the preferred date and time for service appointment. Used in the &quot;Book Appointment&quot; process.</inlineHelpText>
    <label>Preferred Date and Time</label>
    <type>DateTime</type>
</CustomField>