force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Preferred_Date_Update_Count__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_Update_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Preferred Date Update Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>