force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the primary contact for &quot;on-site&quot; Quote Line, if different than Quotes.</description>
    <inlineHelpText>Indicates the primary contact for &quot;on-site&quot; Quote Line, if different than Quotes.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>