force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ProdName_Legacy__c.field-meta.xml
<CustomField>
    <fullName>ProdName_Legacy__c</fullName>
    <label>ProdName_Legacy</label>
    <length>128</length>
    <type>Text</type>
</CustomField>