force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Captures the Product&apos;s Product Code. Used with roll-up summaries.</description>
    <inlineHelpText>Indicates the Product&apos;s Product Code. Used with roll-up summaries.</inlineHelpText>
    <label>RO Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>