force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Captures the Product&apos;s Family. Populated via Process Rule for use with roll-ups.</description>
    <inlineHelpText>Indicates the Product&apos;s Family.</inlineHelpText>
    <label>RO Product Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>