force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Max_Sales_Discount__c.field-meta.xml
<CustomField>
    <fullName>Product_Max_Sales_Discount__c</fullName>
    <label>Product Max Sales Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>