force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Captures the Product&apos;s Product Name. Used with roll-up summaries.</description>
    <inlineHelpText>Indicates the Product&apos;s Product Name. Used with roll-up summaries.</inlineHelpText>
    <label>RO Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>