force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Promo_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_Name__c</fullName>
    <formula>Promotional_Discount__r.Name</formula>
    <label>Promo Code Name</label>
    <type>Text</type>
</CustomField>