force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Promo_Discount_Amt__c.field-meta.xml
<CustomField>
    <fullName>Promo_Discount_Amt__c</fullName>
    <formula>if( Promotional_Discount__r.Priority__c = true,
-CPQ_Rule_Promo_Discount__c,
if(  ABS(Contracted_Discount__c) &gt;=  ABS(SBQQ__VolumeDiscount__c *100 + CPQ_Rule_Promo_Discount__c), 0, -CPQ_Rule_Promo_Discount__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>