force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Promo_Discount_Amt_Format__c.field-meta.xml
<CustomField>
    <fullName>Promo_Discount_Amt_Format__c</fullName>
    <formula>0</formula>
    <label>DELETE Promo Discount Amt Format</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>