force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Promo_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Promo_Discount_Pct__c</fullName>
    <formula>Promotional_Discount__r.Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Discount %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>