force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Promo_Summary__c.field-meta.xml
<CustomField>
    <fullName>Promo_Summary__c</fullName>
    <formula>if (Promo_Discount_Pct__c&gt;0,  Promotional_Discount__r.Name + &quot; (&quot; + text( Promo_Discount_Pct__c*100 ) + &quot;% discount)&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Summary</label>
    <type>Text</type>
</CustomField>