force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Promotion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Reason__c</fullName>
    <label>Promotion Notes</label>
    <length>128</length>
    <type>Text</type>
</CustomField>