force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Promotional_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Discount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Promotion Code</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <errorMessage>Promotion is not active or for a different product</errorMessage>
        <filterItems>
            <field>Promotion__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Promotion__c.Applicable_Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Product__c</valueField>
        </filterItems>
        <filterItems>
            <field>Promotion__c.All_Products__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>