force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Document_TTT_URL__c.field-meta.xml
<CustomField>
    <fullName>Quote_Document_TTT_URL__c</fullName>
    <description>Custom Link to FastForm URL for Client to Select</description>
    <formula>IF(NOT(ISBLANK(Training_Instructor_Requirements_URL__c)),HYPERLINK(Training_Instructor_Requirements_URL__c, &quot;Training Requirements Link&quot;), &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Custom Link to FastForm URL for Client to Select</inlineHelpText>
    <label>Quote Document TTT URL</label>
    <type>Text</type>
</CustomField>