force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Count__c</fullName>
    <description>Set to 1 for all Quote Lines. Used as part of Summary Variables</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to 1 for all Quote Lines. Used as part of Summary Variables</inlineHelpText>
    <label>Quote Line Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>