force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Training_Address1__c.field-meta.xml
<CustomField>
    <fullName>Quote_Training_Address1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Address</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account Address selected needs to have IH3POS value of OS to use!</errorMessage>
        <filterItems>
            <field>Account_Address__c.IHTPOSHT__c</field>
            <operation>equals</operation>
            <value>OS</value>
        </filterItems>
        <infoMessage>Make sure the location address has IH3POS set to OS</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>